--- a/index.html
+++ b/index.html
@@ -21,21 +21,23 @@
                 Desenvolvedor Python <i class="fa-solid fa-laptop-code" id="py"></i>
             </p>
         </div>
-        <a href="https://www.devsantosz.site/" target="_blank">
-            <P> <i class="fa-solid fa-desktop"></i> Portfólio</P>
-        </a>
-        <a href="https://github.com/Devsantosz" target="_blank">
-                <p><i class="fa-brands fa-github"></i> GitHub</p>
-        </a>
-        <a href="https://www.linkedin.com/in/guilherme-luz-085239282/" target="_blank">
-                <p><i class="fa-brands fa-linkedin"></i> Linkedin</p>
-        </a>
-        <a href="https://www.instagram.com/santosz_xyd/" target="_blank">
-                <P><i class="fa-brands fa-instagram"></i> Intagram</P>
-        </a>
-        <a href="https://www.youtube.com/@devsantoszz" target="_blank">
-                <p><i class="fa-brands fa-youtube"></i> Youtube</p>
-        </a>
+        <div class="link-container">
+            <a href="https://www.devsantosz.site/" target="_blank">
+                <P> <i class="fa-solid fa-desktop"></i> Portfólio</P>
+            </a>
+            <a href="https://github.com/Devsantosz" target="_blank">
+                    <p><i class="fa-brands fa-github"></i> GitHub</p>
+            </a>
+            <a href="https://www.linkedin.com/in/guilherme-luz-085239282/" target="_blank">
+                    <p><i class="fa-brands fa-linkedin"></i> Linkedin</p>
+            </a>
+            <a href="https://www.instagram.com/santosz_xyd/" target="_blank">
+                    <P><i class="fa-brands fa-instagram"></i> Intagram</P>
+            </a>
+            <a href="https://www.youtube.com/@devsantoszz" target="_blank">
+                    <p><i class="fa-brands fa-youtube"></i> Youtube</p>
+            </a>
+        </div>
     </main>
     <footer>
         <p>
